--- a/Themes/Styles/Base/Pages/body.xaml
+++ b/Themes/Styles/Base/Pages/body.xaml
@@ -223,7 +223,9 @@
     
     
     
-    
-    
+    <!-- TODO: A modifier ! -->
+    <Style TargetType="{x:Type DatePicker}">
+        
+    </Style>
 
 </ResourceDictionary>
