--- a/Themes/Styles/Base/Widgets/label.xaml
+++ b/Themes/Styles/Base/Widgets/label.xaml
@@ -44,6 +44,34 @@
     <!-- /Plain -->
 
 
+    <!-- Transparent -->
+    <Style x:Key="LabelTransparent" TargetType="Label" BasedOn="{StaticResource LabelTransparent}">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Foreground" Value="{StaticResource RgbM2}" />
+    </Style>
+    
+    <Style x:Key="LabelTransparentM1" TargetType="{x:Type Label}" BasedOn="{StaticResource LabelTransparent}">
+        <Setter Property="Foreground" Value="{StaticResource RgbM2}" />
+    </Style>
+
+    <Style x:Key="LabelTransparentM2" TargetType="{x:Type Label}" BasedOn="{StaticResource LabelTransparent}">
+        <Setter Property="Foreground" Value="{StaticResource RgbM3}" />
+    </Style>
+
+    <Style x:Key="LabelTransparentM3" TargetType="{x:Type Label}" BasedOn="{StaticResource LabelTransparent}">
+        <Setter Property="Foreground" Value="{StaticResource RgbM2}" />
+    </Style>
+
+    <Style x:Key="LabelTransparentB1" TargetType="{x:Type Label}" BasedOn="{StaticResource LabelTransparent}">
+        <Setter Property="Foreground" Value="{StaticResource RgbM3}" />
+    </Style>
+
+    <Style x:Key="LabelTransparentB2" TargetType="{x:Type Label}" BasedOn="{StaticResource LabelTransparent}">
+        <Setter Property="Foreground" Value="{StaticResource RgbM3}" />
+    </Style>
+    <!-- /Transparent -->
+
+
     <!-- INITIAL -->
     <Style TargetType="{x:Type Label}" BasedOn="{StaticResource LabelPlainM1}" />
     <!-- /INITIAL -->
